--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <h1>
-        <img src="assets/wake.jpg" alt="logo wake" width="90" height="100"> Wake Accueil
+        <img src="assets/wake.jpg" alt="WAKE Logo "  alt="logo wake" width="90" height="100">
     </h1>
 </header>
 <section id="general-presentation">
@@ -29,7 +29,7 @@ The event takes hold on 2 days and a half where participants are met by two part
 
     </p>
     <div id="videoContainer">
-        <p>Loading video...</p>
+        
         <video width="320" height="240" controls>
             <source src="assets/Wake teaser.mp4" type="video/mp4" onload="hideloadingIndicator()">
         </video>
@@ -38,34 +38,36 @@ The event takes hold on 2 days and a half where participants are met by two part
     <p> Kelio has said about the event the following: </p>
 </section>
 <div class="countdown-container">
-    <div class="countdown-img">
-        <!-- Image or content goes here -->
-    </div>
-    <div class="row g-0 content">
-        <div class="col text-center">
-            <h2 class="countdown-heading">WAKE is Starting in...</h2>
-            <div id="countdown" class="countdown">
-                <div class="countdown-item">
-                    <span class="countdown-value" id="days"></span>
-                    <span class="countdown-label">Jours</span>
-                </div>
-                <div class="countdown-item">
-                    <span class="countdown-value" id="hours"></span>
-                    <span class="countdown-label">Heures</span>
-                </div>
-                <div class="countdown-item">
-                    <span class="countdown-value" id="minutes"></span>
-                    <span class="countdown-label">Minutes</span>
-                </div>
-                <div class="countdown-item">
-                    <span class="countdown-value" id="seconds"></span>
-                    <span class="countdown-label">Secondes</span>
+    <div class="countdown-container">
+        <div class="row g-0 content">
+            <div class="col text-center">
+                <h2 class="countdown-heading">WAKE is Starting in...</h2>
+                <div id="countdown" class="countdown">
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="days"></span>
+                        <span class="countdown-label">Jours</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="hours"></span>
+                        <span class="countdown-label">Heures</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="minutes"></span>
+                        <span class="countdown-label">Minutes</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="seconds"></span>
+                        <span class="countdown-label">Secondes</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <script src="../src/js/scripts.js"></script>
+    <footer>
+        <p>&copy; 2024 WAKE. All rights reserved</p>
+    </footer>
+    </body>
+    </html>
 
-</body>
-</html>
 
