--- a/src/pages/pictures.html
+++ b/src/pages/pictures.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <h1>
-            <img src="../../public/assets/wake.jpg" alt="logo wake" width="90" height="100"> Wake Accueil
+            <img src="../../public/assets/wake.jpg" alt="logo wake" width="90" height="100"> 
         </h1>
     </header>
     <section id="gallery">
