--- a/public/src/pages/contact.html
+++ b/public/src/pages/contact.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li><a href="../../public/index.html">General Presentation</a></li>
+                <li><a href="/public/index.html">General Presentation</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="registration.html">Registration</a></li>
                 <li><a href="contact.html">Contact</a></li>
