--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,20 @@
+<!-- Example of index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>WAKE - Accueil</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WAKE is a multicultural event hosted by IMT. Join us for a day full of fun and activities.">
-    <link rel="stylesheet" href="/public/src/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WAKE - Home</title>
+    <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="navbar">
                 <li><a href="index.html">General Presentation</a></li>
-                <li><a href="/src/pages/pictures.html">Pictures</a></li>
-                <li><a href="/src/pages/registration.html">Registration</a></li>
-                <li><a href="/src/pages/contact.html">Contact</a></li>
+                <li><a href="src/pages/pictures.html">Pictures</a></li>
+                <li><a href="src/pages/registration.html">Registration</a></li>
+                <li><a href="src/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
         <img src="assets/wake.jpg" alt="WAKE Logo" width="120" height="120">
@@ -59,7 +58,7 @@
             </div>
         </div>
     </div>
-    <script src="/public/src/js/scripts.js"></script>
+    <script src="src/js/scripts.js"></script>
     <footer>
         <p>&copy; 2024 WAKE. All rights reserved</p>
     </footer>
