--- a/public/src/pages/pictures.html
+++ b/public/src/pages/pictures.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li><a href="/public/index.html">General Presentation</a></li>
+                <li><a href="../../index.html">General Presentation</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="registration.html">Registration</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1>
-            <img src="../../public/assets/wake.jpg" alt="logo wake" width="90" height="100"> 
+            <img src="../../assets/wake.jpg" alt="logo wake" width="90" height="100"> 
         </h1>
     </header>
     <section id="gallery">
