--- a/public/src/pages/registration.html
+++ b/public/src/pages/registration.html
@@ -24,7 +24,7 @@
 
     <section id="registrationForm">
         <h1>Register for the Event</h1>
-        <form id="registrationForm" action="thankyou.html" method="post">
+        <form id="registrationForm" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <br>
