--- a/public/src/pages/contact.html
+++ b/public/src/pages/contact.html
@@ -39,6 +39,14 @@
     <p id="contactFormMessage"></p>
     <p>Contact us at the following email: contact@wakeevent.com</p>
     <p>You can also find us on the following social media platforms:</p>
+    <ul class="social-media-links">
+        <li><a href="https://www.instagram.com/yourprofile" target="_blank">
+            <img src="../../assets/iglogo.png" alt="Instagram" width="30" height="30"> Instagram</a></li>
+        <li><a href="https://www.facebook.com/yourprofile" target="_blank">
+            <img src="../../assets/fblogo.png" alt="Facebook" width="30" height="30"> Facebook</a></li>
+        <li><a href="https://www.twitter.com/yourprofile" target="_blank">
+            <img src="../../assets/xlogo.jpg" alt="X/Twitter" width="30" height="30"> Twitter</a></li>
+    </ul>
     </section>
    <script src="../js/scripts.js"></script>
     <footer>
