--- a/public/src/pages/thankyou.html
+++ b/public/src/pages/thankyou.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li><a href="/public/index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="registration.html">Registration</a></li>
                 <li><a href="contact.html">Contact</a></li>
