--- a/public/src/pages/pictures.html
+++ b/public/src/pages/pictures.html
@@ -55,9 +55,9 @@
         const FOLDER_ID = '1eh8JG8NFjze-u-pgTV8xRMp0CWkP9ET3';
 
         const categories = {
-            sports: '1sG0_l0S_c8X7v93DFHLWWy9V4eRjwY76', // Replace with actual folder IDs
-            party: 'your_party_folder_id',
-            welcoming: 'your_welcoming_folder_id',
+            sports: '1tuHQdOUxko6jH3h5Blv5ibqZqwE0vvEI', // Replace with actual folder IDs
+            party: '1mEFyBfGYAmNBt8uPn72AjfqM-joRK9kH',
+            welcoming: '13P6mCfFtKnih4KyU4GQH8S8PYvpDPybw',
           
         };
 
