--- a/public/src/pages/thankyou.html
+++ b/public/src/pages/thankyou.html
@@ -14,7 +14,7 @@
                 <img src="../../assets/wake.jpg" alt="WAKE Logo" class="logo">
                 <ul class="nav-links">
                     <li><a href="../../index.html">General Presentation</a></li>
-                    <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="/public/src/pages/schedule.html">Schedule</a></li>
                     <li><a href="pictures.html">Pictures</a></li>
                     <li><a href="registration.html">Registration</a></li>
                     <li><a href="contact.html">Contact</a></li>
