--- a/public/src/pages/thankyou.html
+++ b/public/src/pages/thankyou.html
@@ -15,9 +15,9 @@
                 <ul class="nav-links">
                     <li><a href="../../index.html">General Presentation</a></li>
                     <li><a href="/src/pages/schedule.html">Schedule</a></li>
-                    <li><a href="pictures.html">Pictures</a></li>
-                    <li><a href="registration.html">Registration</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/src/pages/pictures.html">Pictures</a></li>
+                    <li><a href="/src/pages/registration.html">Registration</a></li>
+                    <li><a href="/src/pages/contact.html">Contact</a></li>
                 </ul>
                 <a href="registration.html" class="cta"><button>Register Now</button></a>
             </div>
